--- a/components/projects/WebPanel.module.css
+++ b/components/projects/WebPanel.module.css
@@ -2,8 +2,14 @@
 
 .panel {
   width: 100%;
-  padding: 0 var(--space-24);
+  padding: 0;
   margin-bottom: calc(-1 * var(--space-48) + var(--space-24));
+}
+
+@media (min-width: 1024px) {
+  .panel {
+    padding: 0 var(--space-24);
+  }
 }
 
 .inner {
